packages/docsearch-css/src/modal.css
/* Body modifier */

.DocSearch--active {
  /*
   * We need to mark it as important because some websites override the
   * `style` attribute (e.g. Docusaurus).
   */
  overflow: hidden !important;
}

/* Container & Modal */

.DocSearch-Container,
.DocSearch-Container * {
  box-sizing: border-box;
}

.DocSearch-Container {
  background-color: var(--docsearch-container-background);
  height: 100vh;
  left: 0;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 200;
}

.DocSearch-Container a {
  text-decoration: none;
}

.DocSearch-Link {
  appearance: none;
  background: none;
  border: 0;
  color: var(--docsearch-highlight-color);
  cursor: pointer;
  font: inherit;
  margin: 0;
  padding: 0;
}

.DocSearch-Modal {
  background: var(--docsearch-modal-background);
  border-radius: 6px;
  box-shadow: var(--docsearch-modal-shadow);
  flex-direction: column;
  margin: 60px auto auto;
  max-width: var(--docsearch-modal-width);
  position: relative;
}

/* Modal Searchbox */

.DocSearch-SearchBar {
  display: flex;
  padding: var(--docsearch-spacing) var(--docsearch-spacing) 0;
}

.DocSearch-Form {
  align-items: center;
  background: var(--docsearch-searchbox-focus-background);
  border-radius: 4px;
  box-shadow: var(--docsearch-searchbox-shadow);
  display: flex;
  height: var(--docsearch-searchbox-height);
  margin: 0;
  padding: 0 var(--docsearch-spacing);
  position: relative;
  width: 100%;
}

.DocSearch-Input {
  appearance: none;
  background: transparent;
  border: 0;
  color: var(--docsearch-text-color);
  flex: 1;
  font: inherit;
  font-size: 1.2em;
  height: 100%;
  outline: none;
  padding: 0 0 0 8px;
  width: 80%;
}

.DocSearch-Input::placeholder {
  color: var(--docsearch-muted-color);
  opacity: 1; /* Firefox */
}

.DocSearch-Input::-webkit-search-cancel-button,
.DocSearch-Input::-webkit-search-decoration,
.DocSearch-Input::-webkit-search-results-button,
.DocSearch-Input::-webkit-search-results-decoration {
  display: none;
}

.DocSearch-LoadingIndicator,
.DocSearch-MagnifierLabel,
.DocSearch-Reset {
  margin: 0;
  padding: 0;
}

.DocSearch-MagnifierLabel,
.DocSearch-Reset {
  align-items: center;
  color: var(--docsearch-highlight-color);
  display: flex;
  justify-content: center;
}

.DocSearch-Container--Stalled .DocSearch-MagnifierLabel {
  display: none;
}

.DocSearch-LoadingIndicator {
  display: none;
}

.DocSearch-Container--Stalled .DocSearch-LoadingIndicator {
  align-items: center;
  color: var(--docsearch-highlight-color);
  display: flex;
  justify-content: center;
}

@media screen and (prefers-reduced-motion: reduce) {
  .DocSearch-Reset {
    animation: none;
    appearance: none;
    background: none;
    border: 0;
    border-radius: 50%;
    color: var(--docsearch-icon-color);
    cursor: pointer;
    right: 0;
    stroke-width: var(--docsearch-icon-stroke-width);
  }
}

.DocSearch-Reset {
  animation: fade-in 0.1s ease-in forwards;
  appearance: none;
  background: none;
  border: 0;
  border-radius: 50%;
  color: var(--docsearch-icon-color);
  cursor: pointer;
  padding: 2px;
  right: 0;
  stroke-width: var(--docsearch-icon-stroke-width);
}

.DocSearch-Reset[hidden] {
  display: none;
}

.DocSearch-Reset:hover {
  color: var(--docsearch-highlight-color);
}

.DocSearch-LoadingIndicator svg,
.DocSearch-MagnifierLabel svg {
  height: 24px;
  width: 24px;
}

.DocSearch-Cancel {
  display: none;
}

/* Modal Dropdown */

.DocSearch-Dropdown {
  max-height: calc(
    var(--docsearch-modal-height) - var(--docsearch-searchbox-height) -
      var(--docsearch-spacing) - var(--docsearch-footer-height)
  );
  min-height: var(--docsearch-spacing);
  overflow-y: auto; /* firefox */
  overflow-y: overlay;
  padding: 0 var(--docsearch-spacing);
  scrollbar-color: var(--docsearch-muted-color)
    var(--docsearch-modal-background);
  scrollbar-width: thin;
}

.DocSearch-Dropdown::-webkit-scrollbar {
  width: 12px;
}

.DocSearch-Dropdown::-webkit-scrollbar-track {
  background: transparent;
}

.DocSearch-Dropdown::-webkit-scrollbar-thumb {
  background-color: var(--docsearch-muted-color);
  border: 3px solid var(--docsearch-modal-background);
  border-radius: 20px;
}

.DocSearch-Dropdown ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.DocSearch-Label {
  color: var(--docsearch-muted-color);
  font-size: 0.75em;
  line-height: 1.6em;
}

.DocSearch-Help {
  color: var(--docsearch-muted-color);
  font-size: 0.9em;
  margin: 0;
  user-select: none;
}

.DocSearch-Title {
  font-size: 1.2em;
}

.DocSearch-Logo a {
  display: flex;
}

.DocSearch-Logo svg {
  color: var(--docsearch-logo-color);
  margin-left: 8px;
}

/* Hit */

.DocSearch-Hits:last-of-type {
  margin-bottom: 24px;
}

.DocSearch-Hits mark {
  background: none;
  color: var(--docsearch-highlight-color);
}

.DocSearch-HitsFooter {
  color: var(--docsearch-muted-color);
  display: flex;
  font-size: 0.85em;
  justify-content: center;
  margin-bottom: var(--docsearch-spacing);
  padding: var(--docsearch-spacing);
}

.DocSearch-HitsFooter a {
  border-bottom: 1px solid;
  color: inherit;
}

.DocSearch-Hit {
  border-radius: 4px;
  display: flex;
  padding-bottom: 4px;
  position: relative;
}

@media screen and (prefers-reduced-motion: reduce) {
  .DocSearch-Hit--deleting {
    transition: none;
  }
}

.DocSearch-Hit--deleting {
  opacity: 0;
  transition: all 250ms linear;
}

@media screen and (prefers-reduced-motion: reduce) {
  .DocSearch-Hit--favoriting {
    transition: none;
  }
}

.DocSearch-Hit--favoriting {
  transform: scale(0);
  transform-origin: top center;
  transition: all 250ms linear;
  transition-delay: 250ms;
}

.DocSearch-Hit a {
  background: var(--docsearch-hit-background);
  border-radius: 4px;
  box-shadow: var(--docsearch-hit-shadow);
  display: block;
  padding-left: var(--docsearch-spacing);
  width: 100%;
}
/* ... */

